--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>环境数据采集一张图</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="js/jquery.min.js"></script>
-		<script src="https://www.jq22.com/jquery/echarts-4.2.1.min.js"></script>
+		<script src="js/echarts-4.2.1.min.js"></script>
 		<script type="text/javascript" src="js/nipplejs.min.js"></script>
 		<script src="js/index.js"></script>
 	</head>
@@ -112,10 +112,14 @@
 					<div class="main_above">
 						<div class="video">
 							<div class="video_tit">
-								实时采集画面
+								实时采集画面&nbsp;&nbsp;
+								<label class="switch-slide">
+									<input type="checkbox" id="video_switch" hidden>
+									<label for="video_switch" class="switch-slide-label"></label>
+								</label>
 							</div>
-							<div>
-
+							<div class="video_container">
+								<img id="stream" src="">
 							</div>
 						</div>
 						<div class="console">
